my-deployment-eval.yml
apiVersion: v1
kind: Deployment
metadata:
  name: my-deployment-eval
    app: my-eval-api
spec:
  replicas: 3
  containers:
  - name: my-eval-server
    image: docker/myapi:latest
    imagePullPolicy: Never
    ports:
    - containerPort: 8000
  - name: my-eval-mysql
    image: datascientest/mysql-k8s:1.0.0
    ports:
    - containerPort: 3306
