my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-eval
spec:
  defaultBackend:
    service:
      name: my-service-eval
      port:
        number: 8002
